# minebtc

./: .gitignore  Cargo.toml  canister_ids.json  dfx.json  generate_did.sh  package-lock.json  package.json  test-agent.js
src/app_backend/: Cargo.toml  app_backend.did
src/app_backend/src/: lib.rs  wallet.rs
src/app_frontend/assets/: .ic-assets.json5  app_backend.did.js  dfinity-agent.js  index.html  login.js  script.js  styles.css  wallet.js
src/financial_engine/: Cargo.toml
src/financial_engine/src/: lib.rs
src/ibtc/: Cargo.toml
src/ibtc/src/: lib.rs
