[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.4"
candid = "0.10.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
ic-stable-structures = "0.6"

[patch.crates-io]
candid = { version = "0.10.13" }
candid_derive = { version = "0.6.6" }