[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.4"
candid = "0.10.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
ic-stable-structures = "0.6"
sha2 = "0.10"        # For Account ID computation
crc32fast = "1.3"    # For Account ID computation
hex = "0.4"          # Added for hex encoding
ic-ledger-types = "0.10.0"  # Added for ledger types

[patch.crates-io]
candid = { version = "0.10.13" }
candid_derive = { version = "0.6.6" }